# cmd/server/handlers/albums/delete-one.go
@@ -12,9 +12,10 @@ import (
 // @Tags albums
 // @Produce  json
 // @Success 200 {object} api.Response
-// @Failure 500 {object} api.Response
-// @Failure 400 {object} api.Response
-// @Failure 404 {object} api.Response
+// @Failure 500 {object} api.Exception
+// @Failure 400 {object} api.Exception
+// @Failure 429 {object} api.Exception
+// @Failure 404 {object} api.Exception
 // @Param id path string true "Album ID"
 // @Param Authorization header string true "Authorization"
 // @Router /api/v1/albums/{id} [delete]
