# cmd/server/handlers/users/sign-up.go
@@ -19,8 +19,9 @@ import (
 // @Produce  application/json
 // @Param user body models.UserRequest true "User request"
 // @Success 200 {object} api.Response
-// @Failure 500 {object} api.Response
-// @Failure 400 {object} api.Response
+// @Failure 500 {object} api.Exception
+// @Failure 400 {object} api.Exception
+// @Failure 429 {object} api.Exception
 // @Router /api/v1/users/signup [post]
 func SignUp(res http.ResponseWriter, req *http.Request) {
 	var request models.UserRequest
